# learning-fastapi

auth/: .gitignore  db.py  dbTables.py  main.py  pydanticModels.py  requirements.txt
auth/router/: auth.py  notes.py
authpractice01/: pyproject.toml
crud-api/: README.md  main.py  patient.json  pydantic_schema.py  pyproject.toml  requirements.txt  tweety.json  tweety.py
crud-api/user_api/: main.py  pydantic_schema.py  users.json
python/: allAboutBoolean.md  dataTypes.md  number.md  oop.py  operators.md  string.md
tweety/: database.py  main.py  pyproject.toml  requirements.txt  sql_model.py
tweety/database/: database.py  sql_model.py
tweety/router/: tweets.py  users.py
tweety/validation/: pydantic_schema.py
